Remove Old Configs, fix bugs and wire-up collapser

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -105,7 +105,8 @@
 }
 
 .archetypeConfig .archetypeDeveloperModel {
-    width: 98%;
+    width: 88%;
+    margin-left: 30px;
     height: 100px;
 }
 
@@ -132,10 +133,32 @@
     margin-bottom: 0;
 }
 
+.archetypeConfig .archetypeFieldsets {
+    margin-left: 0;
+}
+
 .archetypeConfig .archetypeFieldsetTitle {
     overflow: hidden;
 }
 
 .archetypeConfig .arechetypeCollapser{
     margin-top: 10px;
+}
+
+.archetypeConfig .archetypeOptions label{
+    width: 200px;
+}
+
+.archetypeConfig .archetypeAdvancedOptions label{
+    width: 400px;
+}
+
+.archetypeConfig .archetypeDeveloperModel {
+    margin-bottom: 10px;
+}
+
+.archetypeConfig .archetypeMaxFieldsets{
+    border: 1px solid #ddd;
+    width: 25px;
+    text-align: right;
 }
